# slides

./: .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: release.yml  version-bump.yml
apps/backend/src/: main.ts
apps/backend/src/config/: env.ts
apps/backend/src/middleware/: auth.middleware.ts
apps/backend/src/routes/: ai-config.routes.ts  ai.routes.ts  auth.routes.ts  layout-rules.routes.ts  media.routes.ts  presentations.routes.ts  themes.routes.ts
apps/backend/src/services/ai/: ai-provider.interface.ts  anthropic.provider.ts  gemini.provider.ts  openai.provider.ts  provider-factory.ts
apps/backend/src/utils/: encryption.ts
apps/desktop/: project.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api.rs  db.rs  encryption.rs  error.rs  lib.rs  main.rs  mcp.rs  models.rs
apps/desktop/src-tauri/src/ai/: provider.rs
apps/frontend/: project.json  proxy.conf.json
apps/frontend/src/: index.html  styles.scss
apps/frontend/src/app/: app.config.ts  app.routes.ts  app.ts
apps/frontend/src/app/core/guards/: desktop-redirect.guard.ts
apps/frontend/src/app/core/services/: ai.service.ts  auth.interceptor.ts  auth.service.ts  export.service.ts  layout-rule.service.ts  media.service.ts  mermaid.service.ts  presentation.service.ts  theme.service.ts  webgl-transition.service.ts
apps/mcp-server/: project.json  tsconfig.json
apps/mcp-server/src/: index.ts
features/: roadmap.md
libs/markdown-parser/: README.md  package.json  project.json  tsconfig.lib.json
libs/markdown-parser/src/: index.ts
libs/markdown-parser/src/lib/: markdown-parser.ts
libs/shared-types/: package.json
libs/shared-types/src/: index.ts
libs/shared-types/src/lib/: layout-rule.types.ts  shared-types.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20260131155113_init/: migration.sql
prisma/migrations/20260131165858_add_theme_userid/: migration.sql
prisma/migrations/20260131175949_add_media_model/: migration.sql
prisma/migrations/20260204194448_add_layout_rules/: migration.sql
prisma/migrations/20260206182649_add_baseurl_to_ai_config/: migration.sql
prisma/migrations/20260208133315_add_center_content_to_theme/: migration.sql
(+43 files in other folders)
