[package]
name = "slides-desktop"
version = "0.1.0"
description = "Slides - A presentation editor with MCP support"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "slides_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slides-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
